--- a/archive.html
+++ b/archive.html
@@ -1,19 +1,15 @@
 ---
 layout: default
-title: Archive
+title: Articles
 ---
 
-<h2>Archive</h2>
+<h2>Articles</h2>
 
 <ul class="posts">
 {% for post in site.posts %}
   <li>
-    {% comment %}
-    <span>{{ post.date | date_to_string }}</span>
-    <a href="{{ post.url }}">{{ post.title | truncate:56 }}</a>
-    {% endcomment %}
-          
     <a href="{{ post.url }}">{{ post.title }}</a>
-  </li>
+    <span>{{ post.date | date_to_string }}</span>
+   </li>
 {% endfor %}
 </ul>
