--- a/index.html
+++ b/index.html
@@ -15,16 +15,11 @@ layout: default
 
 <h2 class="section">Previously</h2>
 <ul class="posts">
-  {% for post in site.posts offset:5 limit:100 %}
-    <li>
-      {% comment %}
-      <span>{{ post.date | date_to_string }}</span>
-      <a href="{{ post.url }}">{{ post.title | truncate:56 }}</a>
-      {% endcomment %}
-            
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
-  <li><a href="/archive.html"><em>Peruse the archives</em></a></li>
+{% for post in site.posts %}
+  <li>
+    <a href="{{ post.url }}">{{ post.title }}</a>
+    <span>{{ post.date | date_to_string }}</span>
+   </li>
+{% endfor %}
 </ul>
-</div>
+
