--- a/files/javazone/jz.no/index.html
+++ b/files/javazone/jz.no/index.html
@@ -10,7 +10,7 @@
   <title>JZ12</title>
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/jz.css">
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
