--- a/files/javazone/jz.no/cfp.html
+++ b/files/javazone/jz.no/cfp.html
@@ -28,23 +28,22 @@
 
     <div id="logo">
         <a href="index.html">
-            <div class="flame"><img src="img/flame-red.png"></div>
-            <div class="jz"><img src="img/jz.png"></div>
-            <div class="text"><img src="img/logo-text.png"></div>
+            <div class="jz"><img src="img/jz2.png"></div>
+            <div class="text"><img src="img/logo-text2.png"></div>
         </a>
     </div>
 
     <div id="menu">
         <ul>
-            <li><a href="index.html">Tickets</a></li>
+            <li><a href="about.html">About</a></li>
             <li class="middle"><a href="cfp.html">Call for papers</a></li>
-            <li><a href="index.html#partners">Partners</a></li>
+            <li><a href="partners.html">Partners</a></li>
         </ul>
     </div>
 
     <div id="main">
 
-<h2>The Call for Papers is now open</h2>
+<h2>The Call for Papers is open</h2>
 
 <p>To take place in Oslo, Norway, on September 7th-8th 2011, the conference will offer a combination of technical talks and panels in an informal atmosphere with an expected attendance over 2000. JavaZone X will be the tenth consecutive JavaZone conference. Join us and celebrate!</p>
 
@@ -129,7 +128,6 @@
 
 <p>More detailed information will be provided closer to the conference. For questions and registration get in touch with us at program@java.no</p>
 
-<img src="img/javazone_x.jpg" />
 
 <h3>Monetary Policy</h3>
 
@@ -143,6 +141,8 @@
 <p>Best Regards, The JavaZone Program Committee</p>
 
 <a class="submitLink" href="">» I'm ready to submit my proposal!</a>
+
+<img src="img/javazone_x.jpg" />
 
     </div>
 
