--- a/files/javazone/jz.no/index.html
+++ b/files/javazone/jz.no/index.html
@@ -10,7 +10,7 @@
   <title>JZ12</title>
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/jz.css">
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
@@ -25,36 +25,22 @@
 <div id="outer">
 <div id="container">
 <div id="around">
-<div id="wrap">
+<div id="wrap" class="last">
 
     <div id="logo">
         <a href="index.html">
-            <div class="flame"><img src="img/flame-red.png"></div>
-            <div class="jz"><img src="img/jz.png"></div>
-            <div class="text"><img src="img/logo-text.png"></div>
+            <div class="flame"><img src="img/flame-blue.png"></div>
+            <div class="jz"><img src="img/jz2.png"></div>
+            <div class="text"><img src="img/logo-text2.png"></div>
         </a>
     </div>
 
     <div id="menu">
         <ul>
-            <li><a href="index.html">Tickets</a></li>
+            <li><a href="about.html">About</a></li>
             <li class="middle"><a href="cfp.html">Call for papers</a></li>
-            <li><a href="index.html#partners">Partners</a></li>
+            <li><a href="partners.html">Partners</a></li>
         </ul>
-    </div>
-
-    <div id="main">
-        <p><strong>JavaZone</strong> is the biggest meeting place for software developers in Scandinavia, and one of Europe’s most important. JavaZone has been described as a high quality, independent conference – a leading forum for knowledge exchange for IT-professionals.</p>
-        <p>Each year around 2,300 conference tickets are sold. In 2011 JavaZone is arranged for the tenth time.</p>
-        <p>And one of Europe’s most important. JavaZone has been described as a high quality, independent conference – a leading forum for knowledge exchange for IT-professionals. Each year around 2,300 conference tickets are sold. In 2011 JavaZone is arranged for the tenth time.</p>
-        <p>Each year around 2,300 conference tickets are sold. In 2011 JavaZone is arranged for the tenth time.</p>
-        <p>And one of Europe’s most important. JavaZone has been described as a high quality, independent conference – a leading forum for knowledge exchange for IT-professionals. Each year around 2,300 conference tickets are sold. In 2011 JavaZone is arranged for the tenth time.</p>
-        <p>&nbsp;</p>
-        <h2>Partners</h2>
-        <a name="partners"></a>
-        <div id="partners">
-            <div class="clear"></div>
-        </div>
     </div>
 
 </div>
