--- a/files/javazone/tronjz/index.html
+++ b/files/javazone/tronjz/index.html
@@ -9,6 +9,7 @@
   <title>JZ12</title>
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta name = "viewport" content = "initial-scale = 0.6, user-scalable = no"> 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/jz.css">
   <link rel="stylesheet" href="css/min.css">
@@ -18,7 +19,7 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 
-<body class="hyphenate">
+<body>
 
 <div id="line" class="min">
   <a href="#">12-13 Sept 2012</a>
@@ -52,14 +53,14 @@
 <div id="c1"><div id="c2"><div id="c4">
 
 <div id="menu">
-  <div><a href="/">Tickets</a></div>
-  <div class="other"><a href="#">News</a></div>
+  <div><a href="/">Home</a></div>
+  <div class="other"><a href="#">Tickets</a></div>
   <div class="other"><a href="#">Program</a></div>
-  <div><a href="#">Info</a></div>
-  <div class="other middle"><a href="#">Video</a></div>
+  <div><a href="#">About</a></div>
+  <div class="other middle"><a href="#">Info</a></div>
+  <div><a href="#">Video</a></div>
   <div><a href="#">Contact</a></div>
-  <div><a href="#">Twitter</a></div>
-  <div class="other last"><a href="#">Facebook</a></div>
+  <div class="other last"><a href="#">Twitter</a></div>
 </div>
 
 <div id="main">
