--- a/less/index.html
+++ b/less/index.html
@@ -6,15 +6,13 @@ layout: false
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>{% if page.title %}{{ page.title }} (bjorkoy.com){% else %}Olav Bjørkøy (bjorkoy.com){% endif %}</title>
-  <meta name="author" content="Olav Bjorkoy">
-  <meta name="description" content="{% if page.title %}{{page.title}} - {% endif %}Olav Bjorkoy's blog on CSS, Blueprint, HTML, Ruby and anything in-between.">
-  <meta name="keywords" content="HTML, CSS, JS, Blueprint, Ruby, Rails, Olav Bjorkoy, Olav">
+  <title>{% if page.title %}{{ page.title }} (tejas.io){% else %}Tejas Manohar (tejas.io){% endif %}</title>
+  <meta name="author" content="Tejas Manohar">
+  <meta name="description" content="{% if page.title %}{{page.title}} - {% endif %}Tejas Manohar is an engineer and entrepreneur in Nashville.">
+  <meta name="keywords" content="HTML, CSS, JS, Node, Ruby, Sinatra, PHP, GitHub, Open-source, Rails, Engineer, Software, Entrepreneur, Tejas Manohar, Tejas">
   
-  <!-- <link href="/atom.xml" rel="alternate" title="bjorkoy.com" type="application/atom+xml"> -->
-  <link href="http://feeds.feedburner.com/bjorkoy" rel="alternate" title="bjorkoy.com" type="application/atom+xml">
-  <meta name="google-site-verification" content="7vDyCyvSym2pZLSBnjl1IrtN-hp00gqMfNG8fbHNXyM">
-  <link rel="icon" type="image/png" href="http://bjorkoy.com/images/icon.png?8">
+  <link href="http://feeds.feedburner.com/tejasmanohar" rel="alternate" title="tejas.io" type="application/atom+xml">
+  <link rel="icon" type="image/png" href="/images/icon.png?8">
 
   <script type="text/javascript" src="http://use.typekit.com/zmq0szj.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -58,7 +56,7 @@ layout: false
   </script>
 
 </head>
-<body id="bjorkoy-com" class="hyphenate">
+<body id="tejas-io" class="hyphenate">
 
 
 <div class="slide current"><div>
