--- a/resume.html
+++ b/resume.html
@@ -20,11 +20,11 @@
     <h2 id="work">Work</h2>
 
     <ul>
-      <li>Present: Lead Engineer @ AutoLotto</li>
-      <li>Present: Regional Manager @ StudentRND</li>
+      <li>Lead Engineer @ AutoLotto</li>
       <li>Infrastructure Engineer @ HubSpot</li>
-      <li>Technical Blogger @ Orchestrate</li>
-      <li>Software Engineer @ Populr.me</li>
+      <li>Tech Writer @ Orchestrate (-> CenturyLink)</li>
+      <li>Regional Manager @ StudentRND</li>
+      <li>Software Engineer @ Populr (-> Kindful)</li>
     </ul>
 
     <h2 id="activities">Activities</h2>
