--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
       <article>
         <h1>
-          Hey &mdash; I'm Tejas. I am a devtrepreneur from Nashville. I love to architect and implement software systems.
+          Hey &mdash; I'm Tejas. I am a devtrepreneur from Nashville. I love to architect and implement software systems for everyone.
         </h1>
         <h2>
           See my work, connect.
