--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+<doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <meta content='width=device-width,initial-scale=1' name='viewport'>
-    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
     <link href='images/favicon.png' rel='shortcut icon' type='image/png'>
     <title>Tejas Manohar</title>
     <link href="css/home.css" rel="stylesheet" type="text/css" />
+    <script src="js/ga.js" type="text/javascript"></script>
+    <meta name="description" content="Tejas Manohar is a devtrepreneur from Nashville.">
   </head>
   <body>
     <section>
