--- a/resume.html
+++ b/resume.html
@@ -1,10 +1,12 @@
 <doctype html>
 <html>
   <head>
+    <meta content='width=device-width,initial-scale=1' name='viewport'>
     <title>Tejas Manohar</title>
+    <meta name="description" content="Tejas Manohar is a devtrepreneur from Nashville.">
     <link href="css/resume.css" rel="stylesheet" type="text/css" />
+    <script src="js/ga.js" type="text/javascript"></script>
   </head>
-
   <body>
     <h1 id="tejas_manohar">Tejas Manohar</h1>
 
