--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <doctype html>
 <html>
   <head>
+    <meta content='width=device-width,initial-scale=1' name='viewport'>
     <link href='images/favicon.png' rel='shortcut icon' type='image/png'>
     <title>Tejas Manohar</title>
-    <link href="css/home.css" rel="stylesheet" type="text/css" />
-    <script src="js/ga.js" type="text/javascript"></script>
-    <meta name="description" content="Tejas Manohar is a devtrepreneur from Nashville.">
+    <link href='css/home.css' rel='stylesheet' type='text/css' />
+    <script src='js/ga.js' type='text/javascript'></script>
+    <meta name='description' content='Tejas Manohar is a devtrepreneur from Nashville.'>
   </head>
   <body>
     <section>
@@ -19,22 +20,22 @@
         <ul>
           <li>
             <p>
-              <a href='https://twitter.com/tejasmanohar' target='_blank'>Twitter</a>
+              <a href='https://twitter.com/tejasmanohar'>Twitter</a>
             </p>
           </li>
           <li>
             <p>
-              <a href='https://github.com/tejasmanohar' target='_blank'>Github</a>
+              <a href='https://github.com/tejasmanohar'>Github</a>
             </p>
           </li>
           <li>
             <p>
-              <a href='https://medium.com/@tejasmanohar' target='_blank'>Medium</a>
+              <a href='https://medium.com/@tejasmanohar'>Medium</a>
             </p>
           </li>
           <li>
             <p>
-              <a href='/resume' target='_blank'>Resume</a>
+              <a href='/resume'>Resume</a>
             </p>
           </li>
         </ul>
