--- a/resume.html
+++ b/resume.html
@@ -3,23 +3,23 @@
   <head>
     <meta content='width=device-width,initial-scale=1' name='viewport'>
     <title>Tejas Manohar</title>
-    <meta name="description" content="Tejas Manohar is a devtrepreneur from Nashville.">
-    <link href="css/resume.css" rel="stylesheet" type="text/css" />
-    <script src="js/ga.js" type="text/javascript"></script>
+    <meta name='description' content='Tejas Manohar is a devtrepreneur from Nashville.'>
+    <link href='css/resume.css' rel='stylesheet' type='text/css' />
+    <script src='js/ga.js' type='text/javascript'></script>
   </head>
   <body>
-    <h1 id="tejas_manohar">Tejas Manohar</h1>
+    <h1 id='tejas_manohar'>Tejas Manohar</h1>
 
-    <p><a href="mailto:me@tejas.io">me@tejas.io</a></p>
+    <p><a href='mailto:me@tejas.io'>me@tejas.io</a></p>
 
     <p>Brentwood, TN 37027</p>
     <p>615 974 7843</p>
 
-    <h2 id="status">Status</h2>
+    <h2 id='status'>Status</h2>
 
     <p>Busy messing with computers.</p>
 
-    <h2 id="work">Work</h2>
+    <h2 id='work'>Work</h2>
 
     <ul>
       <li>Lead Engineer @ AutoLotto</li>
@@ -29,32 +29,32 @@
       <li>Software Engineer @ Populr (-> Kindful)</li>
     </ul>
 
-    <h2 id="activities">Activities</h2>
+    <h2 id='activities'>Activities</h2>
 
     <ul>
-      <li>coding <a href="http://git.io/tejas">http://git.io/tejas</a></li>
-      <li>writing <a href="http://blog.tejas.io">http://blog.tejas.io</a></li>
-      <li>codeday <a href="https://codeday.org">https://codeday.org</a></li>
+      <li>coding <a href='http://git.io/tejas'>http://git.io/tejas</a></li>
+      <li>writing <a href='http://blog.tejas.io'>http://blog.tejas.io</a></li>
+      <li>codeday <a href='https://codeday.org'>https://codeday.org</a></li>
     </ul>
 
-    <h2 id="open_source">open-source</h2>
+    <h2 id='open_source'>open-source</h2>
 
     <ul>
-      <li>boris <a href="http://git.io/vI7OU">http://git.io/vI7OU</a></li>
-      <li>node-schedule <a href="http://git.io/vI7Yh">http://git.io/vI7Yh</a></li>
-      <li>npm algos <a href="http://git.io/S2v4hA">http://git.io/S2v4hA</a></li>
-      <li>singularity <a href="http://git.io/vI7sV">http://git.io/vI7sV</a></li>
-      <li>omnus <a href="http://git.io/vI7Ou">http://git.io/vI7Ou</a></li>
+      <li>boris <a href='http://git.io/vI7OU'>http://git.io/vI7OU</a></li>
+      <li>node-schedule <a href='http://git.io/vI7Yh'>http://git.io/vI7Yh</a></li>
+      <li>npm algos <a href='http://git.io/S2v4hA'>http://git.io/S2v4hA</a></li>
+      <li>singularity <a href='http://git.io/vI7sV'>http://git.io/vI7sV</a></li>
+      <li>omnus <a href='http://git.io/vI7Ou'>http://git.io/vI7Ou</a></li>
     </ul>
 
-    <h2 id="open_source">projects</h2>
+    <h2 id='open_source'>projects</h2>
 
     <ul>
-      <li>quiztionary <a href="http://quiztionary.com">http://quiztionary.com</a></li>
-      <li>pasterunner <a href="http://pasterunner.com">http://pasterunner.com</a></li>
-      <li>twp2048 <a href="http://twilioplays2048.com">http://twilioplays2048.com</a></li>
-      <li>craigs yo <a href="http://craigsyo.co">http://craigsyo.co</a></li>
-      <li>lancematch <a href="http://lancematch.com/">http://lancematch.com</a></li>
+      <li>quiztionary <a href='http://quiztionary.com'>http://quiztionary.com</a></li>
+      <li>pasterunner <a href='http://pasterunner.com'>http://pasterunner.com</a></li>
+      <li>twp2048 <a href='http://twilioplays2048.com'>http://twilioplays2048.com</a></li>
+      <li>craigs yo <a href='http://craigsyo.co'>http://craigsyo.co</a></li>
+      <li>lancematch <a href='http://lancematch.com/'>http://lancematch.com</a></li>
     </ul>
   </body>
 </html>
