everything in the current

--- a/resume.html
+++ b/resume.html
@@ -24,9 +24,9 @@
     <ul>
       <li>Lead Engineer @ AutoLotto</li>
       <li>Infrastructure Engineer @ HubSpot</li>
-      <li>Tech Writer @ Orchestrate (-> CenturyLink)</li>
+      <li>Tech Writer @ Orchestrate</li>
       <li>Regional Manager @ StudentRND</li>
-      <li>Software Engineer @ Populr (-> Kindful)</li>
+      <li>Software Engineer @ Populr</li>
     </ul>
 
     <h2 id='activities'>Activities</h2>
