--- a/resume.html
+++ b/resume.html
@@ -41,7 +41,7 @@
 
     <ul>
       <li>boris <a href='http://git.io/vI7OU'>http://git.io/vI7OU</a></li>
-      <li>node-schedule <a href='http://git.io/vI7Yh'>http://git.io/vI7Yh</a></li>
+      <li>node schedule <a href='http://git.io/vI7Yh'>http://git.io/vI7Yh</a></li>
       <li>npm algos <a href='http://git.io/S2v4hA'>http://git.io/S2v4hA</a></li>
       <li>singularity <a href='http://git.io/vI7sV'>http://git.io/vI7sV</a></li>
       <li>omnus <a href='http://git.io/vI7Ou'>http://git.io/vI7Ou</a></li>
