--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta content='width=device-width,initial-scale=1' name='viewport'>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
     <title>Tejas Manohar</title>
     <meta name='description' content='Tejas Manohar is a devtrepreneur from Nashville.'>
     <link href='css/resume.css' rel='stylesheet' type='text/css' />
