--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta content='width=device-width,initial-scale=1' name='viewport'>
-    <link href='images/favicon.png' rel='shortcut icon' type='image/png'>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
     <title>Tejas Manohar</title>
     <link href='css/home.css' rel='stylesheet' type='text/css' />
     <script src='js/ga.js' type='text/javascript'></script>
