resume links to companies

--- a/resume.html
+++ b/resume.html
@@ -24,11 +24,11 @@
     <h2 id='work'>Work</h2>
 
     <ul>
-      <li>Lead Engineer @ AutoLotto</li>
-      <li>Infrastructure Engineer @ HubSpot</li>
-      <li>Tech Writer @ Orchestrate</li>
-      <li>Regional Manager @ StudentRND</li>
-      <li>Software Engineer @ Populr</li>
+      <li>Lead Engineer @ <a href='https://autolotto.com'>AutoLotto</a></li>
+      <li>Software Engineer Intern @ <a href='http://www.hubspot.com/'>HubSpot</a></li>
+      <li>Tech Writer @ <a href='https://orchestrate.io/'>Orchestrate</a></li>
+      <li>Regional Manager @ <a href='https://studentrnd.org/'>StudentRND</a></li>
+      <li>Software Engineer Intern @ <a href='https://populr.me/'>Populr</a></li>
     </ul>
 
     <h2 id='activities'>Activities</h2>
