software engineer is more accurate

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section>
       <article>
         <h1>
-          Hey &mdash; I'm Tejas. I am a devtrepreneur from Nashville. I love to architect and implement software systems for everyone.
+          Hey &mdash; I'm Tejas. I am a software engineer from Nashville. I love to architect and implement software systems for everyone.
         </h1>
         <h2>
           See my work, connect.
