add email address to site

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
               <a href='https://medium.com/@tejasmanohar'>Medium</a>
             </p>
           </li>
+          <li>
+            <p>
+              <a href="mailto:me@tejas.io">Email</a>
+            </p>
+          </li>
         </ul>
       </article>
     </section>
