--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tejas Manohar</title>
     <link href='css/home.css' rel='stylesheet' type='text/css' />
     <script src='js/ga.js' type='text/javascript'></script>
-    <meta name='description' content='Tejas Manohar is a devtrepreneur from Nashville.'>
+    <meta name='description' content='Tejas Manohar is a software engineer from Nashville.'>
   </head>
   <body>
     <section>
