Fix capitalization of GitHub

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </li>
           <li>
             <p>
-              <a href='https://github.com/tejasmanohar'>Github</a>
+              <a href='https://github.com/tejasmanohar'>GitHub</a>
             </p>
           </li>
           <li>
