--- a/index.html
+++ b/index.html
@@ -1,55 +1,5 @@
-<doctype html>
-<html>
-  <head>
-    <meta content='width=device-width,initial-scale=1' name='viewport'>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
-    <title>Tejas Manohar</title>
-    <link href='css/home.css' rel='stylesheet' type='text/css' />
-    <script src='js/ga.js' type='text/javascript'></script>
-    <meta name='description' content='Tejas Manohar is a software engineer from Nashville.'>
-  </head>
-  <body>
-    <section>
-      <article>
-        <h1>
-          Hey &mdash; I'm Tejas. I am a software engineer from Tennessee. I love to architect and implement software systems for everyone.
-        </h1>
-        <h2>
-          See my work, connect.
-        </h2>
-        <ul>
-          <li>
-            <p>
-              <a href='https://twitter.com/tejasmanohar'>Twitter</a>
-            </p>
-          </li>
-          <li>
-            <p>
-              <a href='https://github.com/tejasmanohar'>GitHub</a>
-            </p>
-          </li>
-          <li>
-            <p>
-              <a href='https://medium.com/@tejasmanohar'>Medium</a>
-            </p>
-          </li>
-          <li>
-            <p>
-              <a href="mailto:me@tejas.io">Email</a>
-            </p>
-          </li>
-        </ul>
-      </article>
-    </section>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      
-      ga('create', 'UA-12605747-55', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </body>
-</html>
+---
+layout: default
+---
+
+{% include posts.html %}
