--- a/resume/index.html
+++ b/resume/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://macalinao.github.io/resume/resume.pdf" />
+<meta http-equiv="refresh" content="0; url=https://tejas.io/resume.pdf" />
