--- a/_posts/2014-12-17-omniauth-twitter-login-orchestrate.html
+++ b/_posts/2014-12-17-omniauth-twitter-login-orchestrate.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Store OmniAuth User Data with Twitter Login
+title: Store OAuth user data in Orchestrate with OmniAuth
 date: 2014-12-17 00:00:00
 external_url: https://www.ctl.io/developers/blog/post/store-omniauth-user-data-with-twitter-login
 ---
